--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -1,34 +1,100 @@
 <script type="text/javascript">
-    RED.nodes.registerType('edgepi-thermocouple-node',{
-        category: 'Osensa EdgePi',
-        color: '#a6bbcf',
-        defaults: {
-            name: { value:"" },
-            Method: { value: "singleSample"}
-        },
-        inputs:1,
-        outputs:1,
-        icon: "font-awesome/fa-thermometer-2",
-        label: function() {
-            return this.name||"thermocouple-node";
-        }
-    });
+	RED.nodes.registerType('edgepi-thermocouple-node',{
+			category: 'Osensa EdgePi',
+			color: '#a6bbcf',
+			defaults: {
+				name: { value:"" },
+				transport: { value: "Local" },
+				tcpAddress: { value: "" },
+				tcpPort: { value: "" },
+				Method: { value: "singleSample"}
+			},
+			inputs:1,
+			outputs:1,
+			icon: "font-awesome/fa-thermometer-2",
+			label: function() {
+					return this.name||"thermocouple-node";
+			},
+			oneditprepare: function(){
+      // Query html elements
+      const configTransportSelect = document.getElementById("node-input-transport");
+      const tcpField = document.querySelector(".form-row.tcp")
+
+      function updateEditor(){
+				if(configTransportSelect.value === "Network"){
+					tcpField.style.display = "flex";
+				} else {
+					tcpField.style.display = "none";
+				}
+      }
+      // Update and add event listener to update on user input
+      updateEditor()
+      configTransportSelect.addEventListener("change", updateEditor);
+  }
+	});
 </script>
 
 <script type="text/html" data-template-name="edgepi-thermocouple-node">
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
-    <div class="form-row">
-        <label for="node-input-Method">Method</label>
-        <select id="node-input-Method">
-          <option value="singleSample">singleSample</option>
-          <option value="readTemperatures">readTemperatures</option>
-        </select>
-      </div>
+
+	<style>
+		*{
+			box-sizing: border-box !important;
+		}
+
+		.form-row{
+			display: flex;
+			align-items: center;
+		}
+
+		.form-row>label{
+			margin-top: auto; margin-bottom: auto;
+		}
+
+		.form-row.tcp {
+			flex-direction: row;
+			align-items: center;
+			margin-top: -5px; margin-bottom: 10px;
+		}
+
+		.tcp-address-input{
+			width: 110px !important;
+			margin-left: 100px !important;
+		}
+		.tcp-port-input{
+			width: 60px !important;
+		}
+
+		.tcp-port-label{
+			width: 5px !important;
+			margin: auto 5px;
+		}
+	</style>
+	
+	<div class="form-row">
+		<label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+		<input type="text" id="node-input-name" placeholder="Name">
+	</div>
+	<div class="form-row transport">
+    <label for="node-input-transport">Rpc Server:</label>
+    <select id="node-input-transport">
+      <option value="Local">Local</option>
+      <option value="Network">Network</option>
+    </select>
+  </div>
+  <div class="form-row tcp" >
+    <input class ="tcp-address-input" type="text" id="node-input-tcpAddress" placeholder="IP Address">
+    <label class="tcp-port-label" for="node-input-tcpPort">:</label>
+    <input class="tcp-port-input" type="text" id="node-input-tcpPort" placeholder="Port">
+  </div>
+	<div class="form-row">
+		<label for="node-input-Method">Method</label>
+		<select id="node-input-Method">
+			<option value="singleSample">singleSample</option>
+			<option value="readTemperatures">readTemperatures</option>
+		</select>
+	</div>
 </script>
 
 <script type="text/html" data-help-name="edgepi-thermocouple-node">
-    <p>A node that handles handles passing commands to RTU Thermocoupler and displaying output</p>
+	<p>A node that handles handles passing commands to RTU Thermocoupler and displaying output</p>
 </script>
