upgrade rpc + bug fixes

--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -7,7 +7,7 @@
 				transport: { value: "Local" },
 				tcpAddress: { value: "" },
 				tcpPort: { value: "" },
-				output: { value: "lin"}
+				output: { value: "lin"},
 			},
 			inputs:1,
 			outputs:1,
