Specify temperature unit

--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -87,7 +87,7 @@
     <input class="tcp-port-input" type="text" id="node-input-tcpPort" placeholder="Port">
   </div>
 	<div class="form-row">
-		<label for="node-input-output">Output</label>
+		<label for="node-input-output">Output (&deg;C)</label>
 		<select id="node-input-output">
 			<option value="lin">Linearized Temperature</option>
 			<option value="cj">Cold-Junction Temperature</option>
