--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
-	RED.nodes.registerType('edgepi-thermocouple-node',{
-			category: 'Osensa EdgePi',
-			color: '#a6bbcf',
+	RED.nodes.registerType('thermocouple',{
+			category: 'EdgePi',
+			color: '#f391aa',
 			defaults: {
 				name: { value:"" },
 				transport: { value: "Local" },
@@ -13,7 +13,7 @@
 			outputs:1,
 			icon: "font-awesome/fa-thermometer-2",
 			label: function() {
-					return this.name||"thermocouple-node";
+					return this.name||"thermocouple";
 			},
 			oneditprepare: function(){
       // Query html elements
@@ -34,7 +34,7 @@
 	});
 </script>
 
-<script type="text/html" data-template-name="edgepi-thermocouple-node">
+<script type="text/html" data-template-name="thermocouple">
 
 	<style>
 		*{
@@ -57,7 +57,7 @@
 		}
 
 		.tcp-address-input{
-			width: 110px !important;
+			width: 160px !important;
 			margin-left: 100px !important;
 		}
 		.tcp-port-input{
@@ -71,23 +71,23 @@
 	</style>
 	
 	<div class="form-row">
-		<label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+		<label for="node-input-name"><i class="fa fa-tag"></i> Name:</label>
 		<input type="text" id="node-input-name" placeholder="Name">
 	</div>
 	<div class="form-row transport">
-    <label for="node-input-transport">Rpc Server:</label>
+    <label for="node-input-transport">RPC Server:</label>
     <select id="node-input-transport">
       <option value="Local">Local</option>
       <option value="Network">Network</option>
     </select>
   </div>
   <div class="form-row tcp" >
-    <input class ="tcp-address-input" type="text" id="node-input-tcpAddress" placeholder="IP Address">
+    <input class ="tcp-address-input" type="text" id="node-input-tcpAddress" placeholder="IP Address/ Hostname">
     <label class="tcp-port-label" for="node-input-tcpPort">:</label>
     <input class="tcp-port-input" type="text" id="node-input-tcpPort" placeholder="Port">
   </div>
 	<div class="form-row">
-		<label for="node-input-output">Output (&deg;C)</label>
+		<label for="node-input-output">Output (&deg;C):</label>
 		<select id="node-input-output">
 			<option value="lin">Linearized Temperature</option>
 			<option value="cj">Cold-Junction Temperature</option>
@@ -96,8 +96,8 @@
 	</div>
 </script>
 
-<script type="text/html" data-help-name="edgepi-thermocouple-node">
-	<p>EdgePi thermocouple node that reads temperature on input received.</p>
+<script type="text/html" data-help-name="thermocouple">
+	<p>Reads the temperature from a thermocouple connected to the EdgePi.</p>
 	<h3>Properties</h3>
 	<dl class="message-properties">
 		<dt> RPC Server</dt>
