--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -97,14 +97,6 @@
       placeholder="Port"
     />
   </div>
-  <div class="form-row">
-    <label for="node-input-output">Output (&deg;C):</label>
-    <select id="node-input-output">
-      <option value="lin">Linearized Temperature</option>
-      <option value="cj">Cold-Junction Temperature</option>
-      <option value="cj-lin">Cold-Junction & Linearized Temperature</option>
-    </select>
-  </div>
 </script>
 
 <script type="text/html" data-help-name="thermocouple">
@@ -125,27 +117,9 @@
     </dd>
   </dl>
   <h3>Outputs</h3>
-  <p>• When configured to read linearized temperature:</p>
   <dl class="message-properties">
     <dt>payload <span class="property-type">number</span></dt>
-    <dd>regular temperature reading.</dd>
-  </dl>
-  <p>• When configured to read cold junction temperature:</p>
-  <dl class="message-properties">
-    <dt>payload <span class="property-type">number</span></dt>
-    <dd>temperature reading of the cold junction sensor.</dd>
-  </dl>
-  <p>
-    • When configured to read both cold junction and linearized temperature:
-  </p>
-  <dl class="message-properties">
-    <dt>
-      payload
-      <span class="property-type">array[coldJunctionTemp, linearizedTemp]</span>
-    </dt>
-    <dd>
-      an array containing both the cold junction and linearized temperature.
-    </dd>
+    <dd>TC temperature reading.</dd>
   </dl>
   <h3>References</h3>
   <ul>
