--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -110,11 +110,7 @@
   </dl>
   <h3>Inputs</h3>
   <dl class="message-properties">
-    <dt>payload <span class="property-type">string</span></dt>
-    <dd>
-      The output type. 'lin' for Linearized Temperature, 'cj' for Cold-Junction
-      Temperature, 'cj-lin' for Cold Junction & Linearized Temperature.
-    </dd>
+    <dd>Any message can be used to trigger this node.</dd>
   </dl>
   <h3>Outputs</h3>
   <dl class="message-properties">
