update tc HTML guide & packages' versions

--- a/edgepi-thermocouple.html
+++ b/edgepi-thermocouple.html
@@ -104,7 +104,11 @@
   <h3>Properties</h3>
   <dl class="message-properties">
     <dt>RPC Server</dt>
-    <dd>The connection to your EdgePi's RPC Server.</dd>
+    <dd>
+      The connection to your EdgePi's RPC Server. Use <strong>Local</strong> if
+      node-red is running on EdgePi. Otherwise use the
+      <strong>Network</strong> option and enter EdgePi's IP address / Hostname.
+    </dd>
     <dt>Output</dt>
     <dd>What temperature reading(s) will be be sent out through the flow.</dd>
   </dl>
